// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionNetwork should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionNetwork"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Cryptoasset
      </div>
      <div
        class="flex items-center font-semibold"
      >
        ARK Devnet
      </div>
    </div>
    <div
      aria-label="ARK Devnet"
      class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
      data-testid="NetworkIcon-ARK-ark.devnet"
    >
      <div
        class="css-1i4b0eq"
        data-testid="NetworkIcon__icon"
        height="20"
        width="20"
      >
        <svg>
          ark.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionNetwork should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionNetwork"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Cryptoasset
      </div>
      <div
        class="flex items-center font-semibold"
      >
        ARK Devnet
      </div>
    </div>
    <div
      aria-label="ARK Devnet"
      class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
      data-testid="NetworkIcon-ARK-ark.devnet"
    >
      <div
        class="css-1i4b0eq"
        data-testid="NetworkIcon__icon"
        height="20"
        width="20"
      >
        <svg>
          ark.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionNetwork should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionNetwork"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Cryptoasset
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          ARK Devnet
        </div>
        <div
          aria-label="ARK Devnet"
          class="inline-flex h-5 w-5 items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="css-1i4b0eq"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionNetwork should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionNetwork"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Cryptoasset
      </div>
      <div
        class="flex items-center font-semibold"
      >
        ARK Devnet
      </div>
    </div>
    <div
      aria-label="ARK Devnet"
      class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
      data-testid="NetworkIcon-ARK-ark.devnet"
    >
      <div
        class="css-1i4b0eq"
        data-testid="NetworkIcon__icon"
        height="20"
        width="20"
      >
        <svg>
          ark.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionNetwork should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionNetwork"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Cryptoasset
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          ARK Devnet
        </div>
        <div
          aria-label="ARK Devnet"
          class="inline-flex h-5 w-5 items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="css-1i4b0eq"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
